# plore

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yaml  langgraph.json  pyproject.toml
db/: schema.sql
deploy/c1/: README.md  deploy.sh  mint-awc-key.yaml  plore.yaml
deploy/c2/: deploy.sh  plore.yaml
docs/rfc/: 0001-diagnostics-search-logs.md
litellm/: config.yaml
plore/: __init__.py  artifacts.py  awc_api.py  awc_auth.py  checkpoint.py  cli.py  config.py  db.py  ingest.py  llm.py  obs.py  semantic.py
plore/graphs/: __init__.py  common.py  diagnose.py  discovery.py  router.py
ui/: app.py
